RESOLVED FIXED40015
Fix type qualifier is meaningless on cast type in SVGFEColorMatrixElement::build
https://bugs.webkit.org/show_bug.cgi?id=40015
Summary Fix type qualifier is meaningless on cast type in SVGFEColorMatrixElement::build
Laszlo Gombos
Reported 2010-06-01 11:54:02 PDT
"\webkit\WebCore\svg\svgfecolormatrixelement.cpp", line 92: Warning: #191-D: type qualifier is meaningless on cast type const ColorMatrixType filterType(static_cast<const ColorMatrixType>(type())); ^ \webkit\WebCore\svg\svgfecolormatrixelement.cpp: 1 warning, 0 errors Introduced in r56355.
Attachments
proposed patch (1.31 KB, patch)
2010-06-01 11:56 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2010-06-01 11:56:49 PDT
Created attachment 57575 [details] proposed patch
WebKit Commit Bot
Comment 2 2010-06-02 01:04:23 PDT
Comment on attachment 57575 [details] proposed patch Clearing flags on attachment: 57575 Committed r60544: <http://trac.webkit.org/changeset/60544>
WebKit Commit Bot
Comment 3 2010-06-02 01:04:28 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 5 2010-06-02 02:50:19 PDT
(In reply to comment #4) > http://trac.webkit.org/changeset/60544 might have broken Qt Linux Release > The following changes are on the blame list: > http://trac.webkit.org/changeset/60544 > http://trac.webkit.org/changeset/60545 > http://trac.webkit.org/changeset/60546 > http://trac.webkit.org/changeset/60547 > http://trac.webkit.org/changeset/60543 This patch is innocent, another one is the culprit, sorry for the SPAM.
Note You need to log in before you can comment on or make changes to this bug.