2010-06-02  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by David Levin.

        Fix type qualifier is meaningless on cast type in SVGFEColorMatrixElement::build
        https://bugs.webkit.org/show_bug.cgi?id=40015

        No new tests as there is no new functionality.

        Remove const from the cast type.

        * svg/SVGFEColorMatrixElement.cpp:
        (WebCore::SVGFEColorMatrixElement::build):

Canonical link: https://commits.webkit.org/51577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60544 268f45cc-cd09-0410-ab3c-d52691b4dbfc