WebCore/svg/SVGFEColorMatrixElement.cpp
@@ -89,7 +89,7 @@ PassRefPtr<FilterEffect> SVGFEColorMatrixElement::build(SVGFilterBuilder* filter
 
     Vector<float> filterValues;
     SVGNumberList* numbers = values();
-    const ColorMatrixType filterType(static_cast<const ColorMatrixType>(type()));
+    const ColorMatrixType filterType(static_cast<ColorMatrixType>(type()));
 
     // Use defaults if values is empty (SVG 1.1 15.10).
     if (!hasAttribute(SVGNames::valuesAttr)) {
